Data List: Ensure baseline alignment for label (#374)
* Add Next Themes to Data List test page

* Add baseline hack to data list label

--- a/packages/radix-ui-themes/src/components/data-list.css
+++ b/packages/radix-ui-themes/src/components/data-list.css
@@ -143,6 +143,7 @@
 /*                                     */
 /* * * * * * * * * * * * * * * * * * * */
 
+.rt-DataListLabel,
 .rt-DataListValue {
   &::before {
     /*
